# local_polynomial

./: .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  first_implementation.py  pyproject.toml  setup.py
local_polynomial/: local_polynomial.py  loess.py
local_polynomial/src/: cy_loess_wrapper.c  cy_loess_wrapper.pyx  internals.py  loess.c  loess.pyx
local_polynomial/src/C_code/: c_internals.c  c_internals.h  c_loess.c  c_loess.h
src/: internals.py
tests/: first_implementation.py  local_polynomial.py  profiling.py  sqr_poly_local.py  test.py
