[project]
name = "local-polynomial"
version = "0.2.0"
description = "Fast Local Polynomial functions"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "cython>=3.1.6",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "plotly>=6.3.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
